# aa_prompts

./: .env_example  README.md  playground.py  pyproject.toml
prompts/: __init__.py  prompts.py
prompts/definitions/: chain_of_thought_qa.py  chain_of_thought_qa_german.py  entity_extraction_control.py  qa_control.py  qa_few_shot.py
tips_and_tricks/: splitting.py
