[tool.poetry]
name = "aa-prompts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aa_prompts"}]

[tool.poetry.dependencies]
python = "^3.11"
aleph-alpha-client = "^3.1.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
